# chameleon

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  USE_POLICY.md  docker-compose.yaml  download_data.sh  pyproject.toml  viewer_backend.dockerfile  viewer_frontend.dockerfile
chameleon/: download_data.py
chameleon/inference/: alignment.py  chameleon.py  cudagraph.py  generation.py  image_tokenizer.py  loader.py  logits_processor.py  model_adapter.py  stopping_criteria.py  token_selector.py  transformer.py  utils.py  vocab.py  vqgan.py
chameleon/inference/examples/: batch.py  multimodal_input.py  simple.py  streaming.py  streaming_batch.py
chameleon/miniviewer/: __init__.py  __main__.py  miniviewer.html  miniviewer.py
chameleon/viewer/backend/: data_types.py  model_viewer.py  requirements.txt  utils.py
chameleon/viewer/backend/models/: __init__.py  abstract_model.py  chameleon_distributed.py  chameleon_local.py  service.py
chameleon/viewer/frontend/: README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
chameleon/viewer/frontend/src/: App.css  App.tsx  Config.ts  DataTypes.test.tsx  DataTypes.ts  index.css  main.tsx
chameleon/viewer/frontend/src/components/hooks/: useAdvancedMode.tsx
chameleon/viewer/frontend/src/components/inputs/: DialogModal.tsx  InputExampleButton.tsx  InputRange.tsx  InputShowHide.tsx  (+1 more)
chameleon/viewer/frontend/src/helpers/: metaTheme.tsx  misc.ts
config/: model_viewer.yaml
data/: README.md  prompts_for_human_evaluations.jsonl
(+18 files in other folders)
